@@ -1,3 +1,9 @@
+2015-02-11  Doug Evans  <dje@google.com>
+
+	* symfile.h (new_symfile_objfile): Delete.
+	* symfile.c (finish_new_objfile): Renamed from new_symfile_objfile.
+	All callers updated.
+
 2015-02-11  Patrick Palka  <patrick@parcs.ath.cx>
 
 	* tui/tui-io.c (tui_handle_resize_during_io): Call
